--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -1,130 +1,130 @@
 .ContactContainer {
-    width: 100vw;
-    min-height: 80vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 30px;
-    background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
+  width: 100vw;
+  min-height: 80vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 30px;
+  background-image: linear-gradient(62deg, #fbab7e 0%, #f7ce68 100%);
 }
 
 .ContactHeadline {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-    margin: 30px 0;
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  margin: 30px 0;
 }
 
 .ContactHeadline h4 {
-    margin: 0;
+  margin: 0;
 }
 
 .ContactBody {
-    display: flex;
+  display: flex;
 }
 
 .ContactForm {
-    display: flex;
-    flex-direction: column;
-    background: transparent;
-    padding: 0;
-    height: 360px;
-    width: 300px;
+  display: flex;
+  flex-direction: column;
+  background: transparent;
+  padding: 0;
+  height: 360px;
+  width: 300px;
 }
 
 .ContactInput {
-    margin: 0;
-    margin-bottom: 10px;
-    height: 40px;
-    width: 100% !important;
-    border: 0 !important;
-    border-radius: 10px !important;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
-    /* padding: auto; */
-    background-color: rgba(255, 255, 255, 0.3) !important;
-    text-align: start;
-    padding: 0 10px !important;
-    resize: none;
-    box-sizing: border-box;
+  margin: 0;
+  margin-bottom: 10px;
+  height: 40px;
+  width: 100% !important;
+  border: 0 !important;
+  border-radius: 10px !important;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) !important;
+  /* padding: auto; */
+  background-color: rgba(255, 255, 255, 0.3) !important;
+  text-align: start;
+  padding: 0 10px !important;
+  resize: none;
+  box-sizing: border-box;
 }
 
 .ContactInput:focus {
-    border: 0 !important;
-    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2) !important;
+  border: 0 !important;
+  box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2) !important;
 }
 
 .ContactInput:focus + label {
-    color: black;
+  color: black;
 }
 
 .ContactInput::placeholder {
-    color: grey;
+  color: grey;
 }
 
 .ContactForm label {
-    color: black;
-    height: 100%;
-    width: 100%;
+  color: black;
+  height: 100%;
+  width: 100%;
 }
 
 .FirstLine {
-    margin: 0 30px;
+  margin: 0 30px;
 }
 
 .SecondLine {
-    /* padding: 0 30px; */
-    width: 300px;
-    margin: 0 auto;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  /* padding: 0 30px; */
+  width: clamp(300px, 100%, 390px);
+  margin: 0 auto;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .SecondLine label {
-    height: fit-content;
+  height: fit-content;
 }
 
 .SecondLine textarea {
-    padding: 12px !important;
-    flex: 1 !important;
-    outline: none !important;
-    font-family: "Comfortaa", cursive;
-    width: 100%;
+  padding: 12px !important;
+  flex: 1 !important;
+  outline: none !important;
+  font-family: "Comfortaa", cursive;
+  width: 100%;
 }
 
 .SecondLine textarea:focus {
-    border: 0 !important;
-    box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2) !important;
+  border: 0 !important;
+  box-shadow: 0 8px 12px 0 rgba(0, 0, 0, 0.2) !important;
 }
 
 .SubmitButton {
-    margin: 0 30px;
-    padding: 10px;
-    border-radius: 10px;
-    border: none;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
+  margin: 0 30px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 
 .SubmitButton:hover {
-    background-color: rgba(255, 255, 255, 0.7);
-    box-shadow: 0 8px 12px 0 rgba();
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 8px 12px 0 rgba();
 }
 
 .SubmitButton:focus {
-    background-color: white !important;
+  background-color: white !important;
 }
 
 @media all and (max-width: 1024px) {
-    .ContactBody {
-        flex-direction: column;
-    }
+  .ContactBody {
+    flex-direction: column;
+  }
 
-    .ContactForm {
-        margin-bottom: 2rem;
-        width: 100%;
-    }
+  .ContactForm {
+    margin-bottom: 2rem;
+    width: 100%;
+  }
 }
